@@ -30,7 +30,9 @@ OutputHandlerCsv::OutputHandlerCsv(
 	// print CSV header of column names
 	if (printHeader) {
 		// ensure outputs do not intervene
+#if INTARNA_MULITHREADING
 		#pragma omp critical(intarna_outputStreamUpdate)
+#endif
 		{
 			out <<getHeader(colOrder,colSep);
 		}
@@ -73,7 +75,9 @@ add( const Interaction & i )
 	InteractionEnergy::EnergyContributions contr = energy.getE_contributions(i);
 
 	// ensure outputs do not intervene
+#if INTARNA_MULITHREADING
 	#pragma omp critical(intarna_outputStreamUpdate)
+#endif
 	{
 
 		for (auto col = colOrder.begin(); col != colOrder.end(); col++) {
