@@ -54,7 +54,9 @@ add( const Interaction & i )
 	reportedInteractions++;
 
 	// ensure outputs do not intervene
+#if INTARNA_MULITHREADING
 	#pragma omp critical(intarna_outputStreamUpdate)
+#endif
 	{
 		if (!initialOutputDone) {
 			if (printSeparator) {
@@ -183,7 +185,9 @@ add( const Interaction & i )
 			<<"-5'";
 
 	// ensure outputs do not intervene
+#if INTARNA_MULITHREADING
 	#pragma omp critical(intarna_outputStreamUpdate)
+#endif
 	{
 
 		// print full interaction to output stream
@@ -241,7 +245,9 @@ addSeparator (const bool yesNo )
 {
 	printSeparator = yesNo;
 	if (initialOutputDone) {
+#if INTARNA_MULITHREADING
 		#pragma omp critical(intarna_logOutput)
+#endif
 		{ LOG(INFO) <<"OutputHandlerIntaRNA1::addSeparator() called but initial output already done..."; }
 	}
 }
