@@ -32,8 +32,9 @@ predict( const IndexRange & r1
 		, const OutputConstraint & outConstraint
 		)
 {
-
+#if INTARNA_MULITHREADING
 	#pragma omp critical(intarna_logOutput)
+#endif
 	{ VLOG(2) <<"predicting mfe interactions heuristically in O(n^2) space and time..."; }
 	// measure timing
 	TIMED_FUNC_IF(timerObj,VLOG_IS_ON(9));
