@@ -30,8 +30,9 @@ PredictorMfe2dSeed::
 predict( const IndexRange & r1, const IndexRange & r2
 		, const OutputConstraint & outConstraint )
 {
-
+#if INTARNA_MULITHREADING
 	#pragma omp critical(intarna_logOutput)
+#endif
 	{ VLOG(2) <<"predicting mfe interactions with seed in O(n^2) space and O(n^4) time..."; }
 	// measure timing
 	TIMED_FUNC_IF(timerObj,VLOG_IS_ON(9));
