@@ -85,21 +85,24 @@ int main(int argc, char **argv){
 
 		// run prediction for all pairs of sequences
 		// first: iterate over all target sequences
+#if INTARNA_MULITHREADING
 		// OMP shared variables to enable exception forwarding from within OMP parallelized for loop
 		bool threadAborted = false;
 		std::exception_ptr exceptionPtrDuringOmp = NULL;
 		std::stringstream exceptionInfoDuringOmp;
 		// parallelize this loop if possible; if not -> parallelize the query-loop
 		# pragma omp parallel for schedule(dynamic) num_threads( parameters.getThreads() ) shared(queryAcc,reportedInteractions,exceptionPtrDuringOmp,exceptionInfoDuringOmp) if(parallelizeTargetLoop)
+#endif
 		for ( size_t targetNumber = 0; targetNumber < parameters.getTargetSequences().size(); ++targetNumber )
 		{
-
+#if INTARNA_MULITHREADING
 			#pragma omp flush (threadAborted)
 			// explicit try-catch-block due to missing OMP exception forwarding
 			if (!threadAborted) {
 				try {
 					// get target accessibility handler
 					#pragma omp critical(intarna_logOutput)
+#endif
 					{ VLOG(1) <<"computing accessibility for target '"<<parameters.getTargetSequences().at(targetNumber).getId()<<"'..."; }
 
 					// VRNA not completely threadsafe ...
@@ -108,20 +111,26 @@ int main(int argc, char **argv){
 
 					// check if we have to warn about ambiguity
 					if (targetAcc->getSequence().isAmbiguous()) {
+#if INTARNA_MULITHREADING
 						#pragma omp critical(intarna_logOutput)
+#endif
 						{ LOG(INFO) <<"Sequence '"<<targetAcc->getSequence().getId()
 								<<"' contains ambiguous IUPAC nucleotide encodings. These positions are ignored for interaction computation and replaced by 'N'.";}
 					}
 
 					// second: iterate over all query sequences
+#if INTARNA_MULITHREADING
 					// this parallelization should only be enabled if the outer target-loop is not parallelized
 					# pragma omp parallel for schedule(dynamic) num_threads( parameters.getThreads() ) shared(queryAcc,reportedInteractions,exceptionPtrDuringOmp,exceptionInfoDuringOmp,targetAcc,targetNumber) if(parallelizeQueryLoop)
+#endif
 					for ( size_t queryNumber = 0; queryNumber < parameters.getQuerySequences().size(); ++queryNumber )
 					{
+#if INTARNA_MULITHREADING
 						#pragma omp flush (threadAborted)
 						// explicit try-catch-block due to missing OMP exception forwarding
 						if (!threadAborted) {
 							try {
+#endif
 								// sanity check
 								assert( queryAcc.at(queryNumber) != NULL );
 
@@ -146,7 +155,9 @@ int main(int argc, char **argv){
 								BOOST_FOREACH(const IndexRange & tRange, parameters.getTargetRanges(targetNumber)) {
 								BOOST_FOREACH(const IndexRange & qRange, parameters.getQueryRanges(queryNumber)) {
 
+#if INTARNA_MULITHREADING
 									#pragma omp critical(intarna_logOutput)
+#endif
 									{ VLOG(1) <<"predicting interactions for"
 											<<" target "<<targetAcc->getSequence().getId()
 											<<" (range " <<tRange<<")"
@@ -163,7 +174,9 @@ int main(int argc, char **argv){
 								} // target ranges
 								} // query ranges
 
+#if INTARNA_MULITHREADING
 								#pragma omp atomic update
+#endif
 								reportedInteractions += output->reported();
 
 								// garbage collection
@@ -171,6 +184,7 @@ int main(int argc, char **argv){
 								CLEANUP(output);
 								CLEANUP(energy);
 
+#if INTARNA_MULITHREADING
 							////////////////////// exception handling ///////////////////////////
 							} catch (std::exception & e) {
 								// ensure exception handling for first failed thread only
@@ -200,6 +214,7 @@ int main(int argc, char **argv){
 								}
 							}
 						} // if not threadAborted
+#endif
 					} // for queries
 
 					// write accessibility to file if needed
@@ -208,6 +223,7 @@ int main(int argc, char **argv){
 					// garbage collection
 					CLEANUP(targetAcc);
 
+#if INTARNA_MULITHREADING
 				////////////////////// exception handling ///////////////////////////
 				} catch (std::exception & e) {
 					// ensure exception handling for first failed thread only
@@ -237,6 +253,7 @@ int main(int argc, char **argv){
 					}
 				}
 			} // if not threadAborted
+#endif
 		} // for targets
 
 		// garbage collection
@@ -250,6 +267,7 @@ int main(int argc, char **argv){
 			CLEANUP(queryAcc[queryNumber]);
 		}
 
+#if INTARNA_MULITHREADING
 		if (threadAborted) {
 			if (!exceptionInfoDuringOmp.str().empty()) {
 				LOG(WARNING) <<"Exception raised for : "<<exceptionInfoDuringOmp.str();
@@ -258,6 +276,7 @@ int main(int argc, char **argv){
 				std::rethrow_exception(exceptionPtrDuringOmp);
 			}
 		}
+#endif
 
 	////////////////////// exception handling ///////////////////////////
 	} catch (std::exception & e) {
